--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         />
         <h1>Dear</h1>
       </section>
+
       <section class="about">
         <h2>About 「Dear」</h2>
         <p class="about-sentence">
@@ -51,6 +52,7 @@
           だからこそ、写真で表現するということに意味を見出したいと思ってます。
         </p>
       </section>
+
       <section class="members">
         <h2>Members</h2>
         <div class="film-wrap" id="film">
@@ -106,7 +108,7 @@
             <div class="photo">
               <a href="./members/rikkun.html">
                 <img src="./images/member_icons/rikuto.jpg" alt="" />
-                <p>Rikkun</p>
+                <p class="name-board">Rikkun</p>
               </a>
             </div>
             <div class="photo">
@@ -123,31 +125,110 @@
         </div>
       </section>
 
-      <section class="main-visuals">
+      <section class="main-visuals" id="mainVisuals">
         <h2>Main Visuals</h2>
-        <details>
+        <details open>
           <summary></summary>
-
           <div class="details-contents">
             <div class="frame-wrap">
-              <div class="frame">
+              <a class="frame" href="./members/yu.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/yu.jpg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">ゆう</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/suzuna.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/suzuna.jpg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">すずな</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/yugra.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/yugra.jpg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">yu</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/rikkun.html">
                 <img
                   class="main-visual-image"
                   src="./images/main_visuals/rikuto.jpg"
                 />
                 <span class="shadow"></span>
-              </div>
+              </a>
               <p class="name">Rikkun</p>
             </div>
             <div class="frame-wrap">
-              <div class="frame">
+              <a class="frame" href="./members/kojikoji.html">
                 <img
-                  class="main-visual-image"
-                  src="./images/main_visuals/rikuto.jpg"
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/kojikoji.jpg"
                 />
                 <span class="shadow"></span>
-              </div>
-              <p class="name">Rikkun</p>
+              </a>
+              <p class="name">こじこじ</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/mickan.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/mickan.jpg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">甘夏蜜柑</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/aokichi.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/aokichi.jpeg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">あおきち</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/reo.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/reo.jpeg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">Reo</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/suto.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/sutou.jpeg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">すとう しゅんすけ</p>
+            </div>
+            <div class="frame-wrap">
+              <a class="frame" href="./members/hana.html">
+                <img
+                  class="main-visual-image-vertical"
+                  src="./images/main_visuals/hana.jpg"
+                />
+                <span class="shadow"></span>
+              </a>
+              <p class="name">Hana✽*</p>
             </div>
           </div>
         </details>
@@ -160,6 +241,7 @@
         <p>10:00 - 18:30</p>
         <small>※lastday 10:00 - 17:30</small>
       </section>
+
       <section class="access">
         <h2>Access</h2>
         <img class="map" src="./images/map.jpg" alt="" />
