PC用にスタイル修正

--- a/index.html
+++ b/index.html
@@ -129,108 +129,7 @@
         <h2>Main Visuals</h2>
         <details open>
           <summary></summary>
-          <div class="details-contents" id="mainVisualsWrap">
-            <!-- <div class="frame-wrap">
-              <a class="frame" href="./members/yu.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/yu.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">ゆう</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/suzuna.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/suzuna.jpeg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">すずな</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/yugra.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/yugra.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">yu</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/rikkun.html">
-                <img
-                  class="main-visual-image"
-                  src="./images/main_visuals/rikuto.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">Rikkun</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/kojikoji.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/kojikoji.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">こじこじ</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/mickan.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/mickan.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">甘夏蜜柑</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/aokichi.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/aokichi.jpeg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">あおきち</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/reo.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/reo.jpeg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">Reo</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/suto.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/sutou.jpeg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">すとう しゅんすけ</p>
-            </div>
-            <div class="frame-wrap">
-              <a class="frame" href="./members/hana.html">
-                <img
-                  class="main-visual-image-vertical"
-                  src="./images/main_visuals/hana.jpg"
-                />
-                <span class="shadow"></span>
-              </a>
-              <p class="name">Hana✽*</p>
-            </div> -->
-          </div>
+          <div class="details-contents" id="mainVisualsWrap"></div>
         </details>
       </section>
 
