メインビジュアル、個人ページ追加

--- a/members/yu.html
+++ b/members/yu.html
@@ -45,8 +45,17 @@
           </a>
         </div>
       </section>
-      <section class="detail">    
-        <p>COMING SOON</p>
+      <section class="detail">
+        <p>
+          今回、僕は写真と共に４つの物語を書きました<br />
+          どこかの、誰かの、そこら辺にある日常を話にしました<br /><br />
+          プラスもマイナスも出会いも別れもいつかは愛おしい過去になります<br />
+          明日ならなくても、一年後ならなくても、いつかなります<br /><br />
+          あのとき声にできなかった言葉たちがここにあります<br />
+          誰かに伝えられなかった下書きたちがここにあります<br /><br />
+          この写真展、物語が、なにかのきっかけになったら幸いです<br /><br />
+          いつの日か、あなたの今日が昨日があの頃が、愛おしくなりますように
+        </p>
       </section>
     </main>
   </body>
